2008-10-16  Alexander Larsson  <alexl@redhat.com>

	* client/gvfsfusedaemon.c (getattr_for_file):
	Set st_blocks & co so that du works (#554682)
	Patch from Andreas Henriksson

2008-10-09  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonfileinputstream.c:
        (run_sync_state_machine):
	Add some debug spew and avoid crashing in case of code not properly
	setting the GError, as reported on the list.

2008-10-06  Alexander Larsson  <alexl@redhat.com>

	Patch from Andreas Henriksson (from trunk)

        * daemon/gvfsbackendftp.c:
        (dir_default_iter_new):
        (dir_default_iter_process):
	Don't read past start of filename. (#545971)

2008-09-29  David Zeuthen  <davidz@redhat.com>

	* monitor/hal/ghalvolume.c:
	* monitor/hal/ghalvolumemonitor.[ch]:
	* monitor/proxy/gproxyvolume.c:
	Make sure we emit 'mount-added' when forcing an update for
	completing a mount operation (#552168). Cherry-picked from trunk.

2008-09-25  Alexander Larsson  <alexl@redhat.com>

        * common/gvfsdaemonprotocol.c:
        (_g_dbus_get_file_attribute):
	Free returned strv with g_strfreev, not dbus_free_string_array. (#529596)

2008-09-24  Christian Kellner  <gicmo@gnome.org>

	* configure.ac:
	Post release version bump.

=== gvfs 1.0.1. ===

2008-09-24  Christian Kellner  <gicmo@gnome.org>

	* NEWS:
	Update for release.

2008-09-23  Alexander Larsson  <alexl@redhat.com>

        * monitor/proxy/gproxyvolumemonitor.[ch]:
        * monitor/proxy/gproxyvolumemonitor.h:
        * monitor/proxy/remote-volume-monitor-module.c:
	Only call the IsSupported dbus call when the class
	is actually needed instead of on gio init.
	Don't integrate internal session bus with mainloop
	during is_support code, as that is not necessary yet, and
	it caused problem if done in a thread.
	
	This fixes the trash crash issue in bug #547568.

2008-09-23  Alexander Larsson  <alexl@redhat.com>

        * client/Makefile.am:
        * common/Makefile.am:
        * common/gmountsource.c: